tests/snapshots/snapshots__golden_outputs@linux-arm64-oci-a1-plain.snap
---
source: tests/snapshots.rs
expression: "render(&cpu, mode, false)"
---
Identity
  Name          Neoverse-N1 *
  Vendor        ARM *
  Architecture  aarch64
  Hypervisor    KVM/QEMU, topology as reported by guest

Topology
  Cores  2 physical, 2 logical, no SMT

Features
  SIMD    NEON, FP16, DotProd
  Crypto  AES, PMULL, SHA1, SHA256, CRC32
  Other   LSE

* from a built-in table: arm-midr@2026-09
