tests/snapshots/snapshots__golden_outputs@linux-x86-gcp-epyc-7b12-plain.snap
---
source: tests/snapshots.rs
expression: "render(&cpu, mode, false)"
---
Identity
  Name          AMD EPYC 7B12
  Vendor        AMD
  Architecture  x86_64
  Hypervisor    Google Compute Engine, topology as reported by guest

Topology
  Cores  1 physical, 2 logical, SMT x2

Cache
  Level  Cores
  L1i    32 KiB / core
  L1d    32 KiB / core
  L2     512 KiB / core
  L3     16 MiB / core

Features
  SIMD      SSE4.2, AVX, AVX2, FMA
  Crypto    AES, PCLMUL, SHA-NI, RDRAND, RDSEED
  Security  SMEP, SMAP
