tests/snapshots/snapshots__golden_outputs@linux-x86-intel-hybrid-boxed.snap
---
source: tests/snapshots.rs
expression: "render(&cpu, mode, false)"
---
╭ Identity ────────────────────────────────────────────────────────────────╮
│ Name          12th Gen Intel(R) Core(TM) i7-12700K                       │
│ Vendor        Intel                                                      │
│ Architecture  x86_64                                                     │
│ Microcode     0x2f                                                       │
╰──────────────────────────────────────────────────────────────────────────╯
╭ Topology ────────────────────────────────────────────────────────────────╮
│ Cores     12 physical · 20 logical                                       │
│ Clusters  8 × Performance · 4 × Efficiency                               │
╰──────────────────────────────────────────────────────────────────────────╯
╭ Clocks ─┬─────────────┬──────────────────────────────────────────────────╮
│         │ Performance │ Efficiency                                       │
├─────────┼─────────────┼──────────────────────────────────────────────────┤
│ Base    │ 3.60 GHz    │ 2.70 GHz                                         │
│ Max     │ 5.00 GHz    │ 3.80 GHz                                         │
╰─────────┴─────────────┴──────────────────────────────────────────────────╯
╭ Cache ─┬─────────────────┬───────────────────────────────────────────────╮
│ Level  │ Performance     │ Efficiency                                    │
├────────┼─────────────────┼───────────────────────────────────────────────┤
│ L1i    │ 32 KiB / core   │ 64 KiB / core                                 │
│ L1d    │ 48 KiB / core   │ 32 KiB / core                                 │
│ L2     │ 1280 KiB / core │ 2 MiB / 4 cores                               │
│ L3     │ 25 MiB shared by all 12 cores                                   │
╰────────┴─────────────────┴───────────────────────────────────────────────╯
╭ Features ────────────────────────────────────────────────────────────────╮
│ SIMD            SSE4.2 · AVX · AVX2 · FMA · AVX-VNNI                     │
│ Crypto          AES · PCLMUL · VAES · VPCLMUL · SHA-NI · RDRAND · RDSEED │
│ Virtualization  VT-x                                                     │
│ Security        IBT · CET-SS · SMEP · SMAP                               │
╰──────────────────────────────────────────────────────────────────────────╯
